--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.49",
-    "framework7": "^3.0.0-beta.8",
-    "framework7-react": "^3.0.0-beta.8",
+    "framework7": "^3.0.0-beta.9",
+    "framework7-icons": "^0.9.1",
+    "framework7-react": "^3.0.0-beta.9",
+    "material-design-icons": "^3.0.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-scripts": "2.0.0-next.66cc7a90"
