--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "framework7": "^4.0.0",
-    "framework7-react": "^4.0.0",
     "framework7-icons": "^2.2.0",
+    "framework7-react": "^4.0.0",
+    "jquery": "^3.3.1",
     "material-design-icons": "^3.0.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
