[Update] package.jsonのname修正

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "framework7-react-app-template",
+  "name": "ivy_lee_list",
   "version": "4.0.0",
   "private": true,
   "dependencies": {
